<resources>
    <string name="app_name">gas_station</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="quantity">quantity</string>
    <string name="fuel_name">Fuel name</string>
</resources>